--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
     }
   ],
   "require": {
-    "php": ">=7.0",
-    "illuminate/support": "5.4.*",
-    "laravel/passport": "^2.0",
+    "php": "^7.1.3",
+    "illuminate/support": "5.6.*",
+    "laravel/passport": "^6.0",
     "intervention/image": "^2.3"
   },
   "autoload": {
