--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,32 @@
 {
-  "name": "Dion/foa",
-  "description": "",
-  "authors": [
-    {
-      "name": "Daniel Koch",
-      "email": "dionyseos@gmail.com"
-    }
-  ],
-  "require": {
-    "php": "^7.1.3",
-    "illuminate/support": "5.6.*",
-    "laravel/passport": "^6.0",
-    "intervention/image": "^2.3"
-  },
-  "autoload": {
-    "psr-4": {
-      "Dion\\Foa\\": "src"
+    "name": "Dion/foa",
+    "description": "",
+    "authors": [
+        {
+            "name": "Daniel Koch",
+            "email": "dionyseos@gmail.com"
+        }
+    ],
+    "require": {
+        "php": "^7.1.3",
+        "illuminate/support": "5.7.*",
+        "laravel/passport": "^6.0",
+        "intervention/image": "^2.3"
     },
-    "classmap": [
-      "src/database/migrations"
-    ]
-  },
-  "minimum-stability": "stable"
+    "autoload": {
+        "psr-4": {
+            "Dion\\Foa\\": "src"
+        },
+        "classmap": [
+            "src/database/migrations"
+        ]
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Dion\\Foa\\FoaServiceProvider"
+            ]
+        }
+    },
+    "minimum-stability": "stable"
 }
