--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^7.1.3",
         "illuminate/support": "5.7.*",
         "laravel/passport": "^6.0",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "symfony/expression-language": "^4.2"
     },
     "autoload": {
         "psr-4": {
